# pip-check

./: .coverage  .gitignore  .python-version  .travis.yml  CHANGELOG.md  LICENSE  README.md  README.rst  noxfile.py  pip-check  pip_check.py  pyproject.toml  setup.py  tox.ini
.github/workflows/: pythonpackage.yml  test.yml
src/pip_check/: __init__.py  __main__.py
