[project]
name = "pip-check"
version = "3.1a0"
description = "Display installed pip packages and their update status."
readme = "README.md"
requires-python = ">=3.8"
authors = [
    { name = "Martin Mahner", email = "martin@mahner.org" }
]
license = { text = "MIT" }
dependencies = [
    "terminaltables",
    "packaging",
]

[dependency-groups]
dev = [
    "nox>=2022.1.7",
    "ruff>=0.11.5",
]

[project.urls]
Homepage = "https://github.com/bartTC/pip-check/"

[project.scripts]
pip-check = "pip_check:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.ruff]
target-version = "py38"
lint.select = ["ALL"]
lint.ignore = [
  "D203",     # No blank line before cclass
  "D212",     # Multi-line summary first line
  "E501",     # Line too long (>88)
  "COM812",   # (ruff format) Checks for the absence of trailing commas
  "ISC001",   # (ruff format) Checks for implicitly concatenated strings on a single line
]

[tool.ruff.lint.extend-per-file-ignores]
"noxfile.py" = [
  "S101",    # Use of assert detected
]
